# pacmon

./: README.md  cross-compile-cpp.sh
tool/cpp/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  conanfile.txt  cross-compile.sh
tool/cpp/docker-workflows/debian/: run.sh
tool/cpp/docker-workflows/debian/bovisa/: PKGBUILD
tool/cpp/docker-workflows/debian/output/: PKGBUILD
tool/cpp/include/lib/: cli.hpp  config.hpp  exceptions.hpp  repository.hpp  source.hpp  system.hpp  types.hpp
tool/cpp/include/lib/cli/: cli.hpp  menu.hpp  option.hpp
tool/cpp/include/lib/config/: config.hpp
tool/cpp/include/lib/exceptions/: index_out_of_bound.hpp  invalid_index_file_path.hpp  invalid_repository_index_file_path.hpp  invalid_repository_package_index_file_path.hpp  invalid_repository_platform_index_file_path.hpp  invalid_repository_version_index_file_path.hpp  invalid_source_index_file_path.hpp  invalid_source_package_index_file_path.hpp  invalid_source_platform_index_file_path.hpp  invalid_source_version_index_file_path.hpp  invalid_worker_path.hpp  item_already_there.hpp  item_not_found.hpp
tool/cpp/include/lib/repository/: package.hpp  platform.hpp  repository.hpp  version.hpp
tool/cpp/include/lib/source/: package.hpp  package_worker.hpp  packager.hpp  platform.hpp  platform_worker.hpp  source.hpp  source_worker.hpp  version.hpp  version_worker.hpp
tool/cpp/include/lib/system/: file_manager.hpp  software_manager.hpp
tool/cpp/include/lib/types/: index_file.hpp  semver.hpp  semver_list.hpp  string_list.hpp  worker.hpp
tool/cpp/requirements/: Makefile  archlinux.sh  debian.sh  install-requirements.sh
tool/cpp/src/lib/: CMakeLists.txt
tool/cpp/src/lib/cli/: CMakeLists.txt  cli.cpp  menu.cpp  option.cpp
tool/cpp/src/lib/config/: CMakeLists.txt  config.cpp
tool/cpp/src/lib/exceptions/: CMakeLists.txt  index_out_of_bound.cpp  invalid_index_file_path.cpp  invalid_repository_index_file_path.cpp  invalid_repository_package_index_file_path.cpp  invalid_repository_platform_index_file_path.cpp  invalid_repository_version_index_file_path.cpp  invalid_source_index_file_path.cpp  invalid_source_package_index_file_path.cpp  invalid_source_platform_index_file_path.cpp  invalid_source_version_index_file_path.cpp  invalid_worker_path.cpp  item_already_there.cpp  item_not_found.cpp
tool/cpp/src/lib/repository/: CMakeLists.txt  package.cpp  platform.cpp  repository.cpp  version.cpp
tool/cpp/src/lib/source/: CMakeLists.txt  package.cpp  package_worker.cpp  platform.cpp  platform_worker.cpp  ve  (+4 more)
tool/cpp/src/main/: CMakeLists.txt  main.cpp
tool/haskell/: CHANGELOG.md  tool.cabal
tool/haskell/app/: Main.hs
(+31 files in other folders)
