cabal-version:      2.4
name:               tool
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             frefolli
maintainer:         f.refolli@campus.unimib.it

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable tool
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        yaml ^>=0.11.8.0,
        haskell-say ^>= 1.0.0.0,
        text ^>=2.0.1,
        bytestring ^>=0.10.10.0
    hs-source-dirs:   app
    default-language: Haskell2010
